sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
var l = getNombreValeurs()

	for (j <- l-2 downto 0)
	{for (i<- 0 to j)	
	{if (plusPetit (i+1, i))
	{echange (i,i+1)}}
	}
}

